--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 
     <!-- bootstrap css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="stylesheet.css">
        
     <!-- don't use this in production: -->
     <script>var exports = {};</script>
@@ -33,7 +34,7 @@
     <script src="alldata.js" defer type="text/babel"></script>
     <script src="home.js" defer type="text/babel"></script>
     <script src="index.js" defer type="text/babel"></script>
-    <script src="newlogin.js" defer type="text/babel"></script>
+    <script src="dashboard.js" defer type="text/babel"></script>
 
 
   </body>
