--- a/public/index.html
+++ b/public/index.html
@@ -23,18 +23,18 @@
     <script src="https://unpkg.com/react-router-dom@5.2.1/umd/react-router-dom.min.js" crossorigin></script>
 
     <!-- load our react component. -->
-    <script src="context.js" defer type="text/babel"></script>
-    <script src="navbar.js" defer type="text/babel"></script>
-    <script src="createaccount.js" defer type="text/babel"></script>
-    <script src="login.js" defer type="text/babel"></script>
-    <script src="deposit.js" defer type="text/babel"></script>
-    <script src="withdraw.js" defer type="text/babel"></script>
+    <script src="context.mjs" defer type="text/babel"></script>
+    <script src="navbar.mjs" defer type="text/babel"></script>
+    <script src="createaccount.mjs" defer type="text/babel"></script>
+    <script src="login.mjs" defer type="text/babel"></script>
+    <script src="deposit.mjs" defer type="text/babel"></script>
+    <script src="withdraw.mjs" defer type="text/babel"></script>
     <!-- <script src="transactions.js" defer type="text/babel"></script> -->
-    <script src="balance.js" defer type="text/babel"></script>
-    <script src="alldata.js" defer type="text/babel"></script>
-    <script src="home.js" defer type="text/babel"></script>
-    <script src="index.js" defer type="text/babel"></script>
-    <script src="dashboard.js" defer type="text/babel"></script>
+    <script src="balance.mjs" defer type="text/babel"></script>
+    <script src="alldata.mjs" defer type="text/babel"></script>
+    <script src="home.mjs" defer type="text/babel"></script>
+    <script src="index.mjs" defer type="text/babel"></script>
+    <script src="dashboard.mjs" defer type="text/babel"></script>
 
 
   </body>
